add-select-main-page-modal

--- a/another-time.html
+++ b/another-time.html
@@ -354,11 +354,7 @@
       </div>
     </div>
   </div>
-  <!--============================================================================= 
-		Модальное окно Время занято, выберите другое!
-		Если для его отображения не требуется клик по кнопке с атрибутом frame-btn="another-time" , то атрибут frame-modal="another-time"  можно удалить.
-		-->
-  <!--=============================================================================-->
+  <!--=================	Модальное окно Время занято, выберите другое! 	Если для его отображения не требуется клик по кнопке с атрибутом frame-btn="another-time" , то атрибут frame-modal="another-time"  можно удалить. ==========-->
   <div class="modal-frame-wrapper modal-frame-center visible" frame-modal="another-time">
     <div class="modal-frame flex-column p-32 pos-rel">
       <div class="icon-close pos-abs" frame-close></div>
