add-empl-service-list

--- a/empl-schedule.html
+++ b/empl-schedule.html
@@ -24,7 +24,7 @@
   <!--===================opengraf=======================================-->
   <link rel="stylesheet" href="./fonts/fonts.css">
   <link rel="stylesheet" href="./css/main.css">
-  <title>Кабинет клиента</title>
+  <title>Кабинет сотрудника | График работы</title>
 </head>
 
 <body class="client-cabinet" style="opacity:0;transition:opacity .7s;">
