--- a/employee-personal-page.html
+++ b/employee-personal-page.html
@@ -165,6 +165,7 @@
             <div class="employee-personal-place__toggle">
               <div class="btn btn-32">Основная информация</div>
               <a class="label-light label-light--large" href="empl-schedule.html">График работы</a>
+              <a class="label-light label-light--large" href="empl-service-list.html">Услуги</a>
             </div>
             <div class="employee-personal-place__acordion">
               <div class="employee-acordion-content">
