--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
       <a href="empl-schedule.html">
         <span>График сотрудника</span>
       </a>
+      <a href="empl-service-list.html">
+        <span>Услуги сотрудника </span>
+      </a>
     </div>
     <h2 class="text-center mb-32">Пациенты - sublinks</h2>
     <div class="start-page__cards mb-32">
