--- a/duplication-modal.html
+++ b/duplication-modal.html
@@ -314,9 +314,10 @@
             <span class="text-18">Добавить aллергию</span>
           </button>
           <!--===== Список добавляемых пунктов. Пока он пустой я его закомментировала. С введенными значениями его можно увидеть в форме РЕДАКТИРОВАНИЕ ПАЦИЕНТА ======-->
-          <!--==== .content-list-->
-          <!--==== 		ul-->
-          <!--====			li-->
+          <!--.content-list
+						ul
+							li
+						-->
           <div class="flex-vertical-center gap-20 mt-40">
             <button class="btn btn-44" frame-close>Сохранить</button>
             <button class="btn btn-44 btn--orange" frame-close>Отменить</button>
