--- a/main2.html
+++ b/main2.html
@@ -669,6 +669,7 @@
                         </div>
                       </div>
                     </div>
+                    <!--=== блок с возможностью выбора времени-->
                     <div class="select-time-wrapper flex-wrapper">
                       <label class="radiobutton-time flex-box flex-y-center" frame-btn="appoint-modal">
                         <input class="timetable-radiobtn" type="radio" name="time-radiobtn" />
@@ -900,6 +901,7 @@
                         </div>
                       </div>
                     </div>
+                    <!--=== блок с возможностью выбора времени-->
                     <div class="select-time-wrapper flex-wrapper">
                       <label class="radiobutton-time flex-box flex-y-center" frame-btn="appoint-modal">
                         <input class="timetable-radiobtn" type="radio" name="time-radiobtn" />
