--- a/authoriz-4.html
+++ b/authoriz-4.html
@@ -658,6 +658,7 @@
                         </div>
                       </div>
                     </div>
+                    <!--=== блок с возможностью выбора времени-->
                     <div class="select-time-wrapper flex-wrapper">
                       <label class="radiobutton-time flex-box flex-y-center" frame-btn="appoint-modal">
                         <input class="timetable-radiobtn" type="radio" name="time-radiobtn" />
@@ -889,6 +890,7 @@
                         </div>
                       </div>
                     </div>
+                    <!--=== блок с возможностью выбора времени-->
                     <div class="select-time-wrapper flex-wrapper">
                       <label class="radiobutton-time flex-box flex-y-center" frame-btn="appoint-modal">
                         <input class="timetable-radiobtn" type="radio" name="time-radiobtn" />
