--- a/employees-page.html
+++ b/employees-page.html
@@ -162,6 +162,13 @@
               </div>
             </div>
           </div>
+          <!--======= сбросить фильтры ==============-->
+          <div class="employee-page-reset">
+            <button class="btn-reset">
+              <div class="icon-close"></div>
+              <span>Сбросить фильтры</span>
+            </button>
+          </div>
           <div class="blok-wrapper ml-auto">
             <div class="employee-add__btn" frame-btn="add-new-empl">
               <button class="btn">Добавить сотрудника</button>
@@ -415,6 +422,7 @@
   <!--======= кастомный плагин выбра даты в инпуте =============-->
   <script src="./libs/ui-datapicker/ui-datapicker.js"></script>
   <!--=============== мои скрипты ===================-->
+  <script src="./js/quiz.js"></script>
   <script src="./js/main.js"></script>
 </body>
 
