--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
   <div class="start-page">
     <h1>IWEEK</h1>
     <div class="start-page__cards mb-32">
-      <a href="../ui/colors.html">UI-KIT PAGE</a>
+      <a href="main3.html">
+        <span>Шапка с категориями</span>
+      </a>
       <a href="main.html">
         <span>Главная</span>
       </a>
@@ -62,6 +64,9 @@
       </a>
       <a href="page-404.html">
         <span>404</span>
+      </a>
+      <a href="empl-reg.html">
+        <span>Регистрация Исполнителя</span>
       </a>
     </div>
     <h2 class="text-center mb-32">Кабинет сотрудника</h2>
@@ -163,6 +168,7 @@
   <!--======= кастомный плагин выбра даты в инпуте =============-->
   <script src="./libs/ui-datapicker/ui-datapicker.js"></script>
   <!--=============== мои скрипты ===================-->
+  <script src="./js/quiz.js"></script>
   <script src="./js/main.js"></script>
 </body>
 
