--- a/page-404.html
+++ b/page-404.html
@@ -378,6 +378,7 @@
   <!--======= кастомный плагин выбра даты в инпуте =============-->
   <script src="./libs/ui-datapicker/ui-datapicker.js"></script>
   <!--=============== мои скрипты ===================-->
+  <script src="./js/quiz.js"></script>
   <script src="./js/main.js"></script>
 </body>
 
