--- a/page-schedule.html
+++ b/page-schedule.html
@@ -1159,6 +1159,7 @@
   <!--======= кастомный плагин выбра даты в инпуте =============-->
   <script src="./libs/ui-datapicker/ui-datapicker.js"></script>
   <!--=============== мои скрипты ===================-->
+  <script src="./js/quiz.js"></script>
   <script src="./js/main.js"></script>
 </body>
 
