--- a/visitor-edit-page.html
+++ b/visitor-edit-page.html
@@ -228,6 +228,7 @@
   <!--======= кастомный плагин выбра даты в инпуте =============-->
   <script src="./libs/ui-datapicker/ui-datapicker.js"></script>
   <!--=============== мои скрипты ===================-->
+  <script src="./js/quiz.js"></script>
   <script src="./js/main.js"></script>
 </body>
 
